--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="oDVfE1nBZzyFxb3YAKQhSJMlPAsSldSKD6NAdxck6HM" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>The Ultimate Guide to GBWhatsApp: Cool Features You Will Like</title>
